# git-author-rewrite

./: README.md  TODO  pyproject.toml  requirements.txt
git_author_rewrite/: enums.py  installer.py  main.py  message_handler.py  os_info.py
test/: test_main.py
tests/: test_main.py  test_message_handler.py  test_os_info.py
