[project]
name = "git-author-rewrite"
version = "0.1.0"
description = "git-reown is a command-line tool that allows developers to update the author name and/or email in Git commit history. It offers flexible options to either interactively modify specific commits or perform a full history rewrite, ensuring accurate attribution while minimizing disruption to collaborators."
authors = [
    {name = "ideftbuild",email = "a.akanSWE@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gitpython (>=3.1.44,<4.0.0)",
    "git-filter-repo (>=2.47.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
